src/peptalk.output
Estado 1 conflictos: 7 reducción/reducción
Estado 2 conflictos: 7 reducción/reducción
Estado 30 conflictos: 7 desplazamiento/reducción
Estado 34 conflictos: 10 reducción/reducción
Estado 41 conflictos: 7 desplazamiento/reducción


Gramática

    0 $accept: list $end

    1 list: list item
    2     | item

    3 item: keyval
    4     | keygroup
    5     | EOL
    6     | SPACE
    7     | declaration
    8     | error

    9 keyval: blob ':' blob

   10 $@1: %empty

   11 keygroup: blob OPENKEY $@1 keylist CLOSEKEY

   12 keylist: keylist keylist_item
   13        | keylist_item

   14 keylist_item: preedit
   15             | keyval
   16             | keygroup
   17             | EOL
   18             | error
   19             | blob

   20 $@2: %empty

   21 $@3: %empty

   22 preedit: blob $@2 THEN blob $@3 EOL

   23 $@4: %empty

   24 $@5: %empty

   25 declaration: DTEXT optionalcolon optionalweight TYPE $@4 numlist $@5 EOL

   26 $@6: %empty

   27 declaration: DTEXT optionalcolon optionalweight TYPE $@6 EOL

   28 $@7: %empty

   29 $@8: %empty

   30 declaration: DTEXT optionalcolon optionalweight $@7 numlist $@8 EOL

   31 optionalcolon: ':'
   32              | optionalcolon SPACE
   33              | %empty

   34 optionalweight: WEIGHT
   35               | %empty

   36 numlist: num_item
   37        | numlist ',' num_item
   38        | numlist SPACE

   39 num_item: NUMBER '-' NUMBER
   40         | NUMBER
   41         | DTEXT
   42         | '*'
   43         | '$' NUMBER
   44         | error

   45 blob: blob blob_elmt
   46     | blob_elmt
   47     | error

   48 blob_elmt: TEXT
   49          | NUMBER
   50          | ','
   51          | '*'
   52          | '-'
   53          | '$'
   54          | SPACE


Terminales con las reglas donde aparecen

$end (0) 0
'$' (36) 43 53
'*' (42) 42 51
',' (44) 37 50
'-' (45) 39 52
':' (58) 9 31
error (256) 8 18 44 47
SPACE (258) 6 32 38 54
NUMBER (259) 39 40 43 49
DTEXT (260) 25 27 30 41
THEN (261) 22
EOL (262) 5 17 22 25 27 30
TEXT (263) 48
OPENKEY (264) 11
CLOSEKEY (265) 11
TYPE (266) 25 27
WEIGHT (267) 34


No terminales con las reglas donde aparecen

$accept (18)
    en la izquierda: 0
list (19)
    en la izquierda: 1 2, en la derecha: 0 1
item (20)
    en la izquierda: 3 4 5 6 7 8, en la derecha: 1 2
keyval (21)
    en la izquierda: 9, en la derecha: 3 15
keygroup (22)
    en la izquierda: 11, en la derecha: 4 16
$@1 (23)
    en la izquierda: 10, en la derecha: 11
keylist (24)
    en la izquierda: 12 13, en la derecha: 11 12
keylist_item (25)
    en la izquierda: 14 15 16 17 18 19, en la derecha: 12 13
preedit (26)
    en la izquierda: 22, en la derecha: 14
$@2 (27)
    en la izquierda: 20, en la derecha: 22
$@3 (28)
    en la izquierda: 21, en la derecha: 22
declaration (29)
    en la izquierda: 25 27 30, en la derecha: 7
$@4 (30)
    en la izquierda: 23, en la derecha: 25
$@5 (31)
    en la izquierda: 24, en la derecha: 25
$@6 (32)
    en la izquierda: 26, en la derecha: 27
$@7 (33)
    en la izquierda: 28, en la derecha: 30
$@8 (34)
    en la izquierda: 29, en la derecha: 30
optionalcolon (35)
    en la izquierda: 31 32 33, en la derecha: 25 27 30 32
optionalweight (36)
    en la izquierda: 34 35, en la derecha: 25 27 30
numlist (37)
    en la izquierda: 36 37 38, en la derecha: 25 30 37 38
num_item (38)
    en la izquierda: 39 40 41 42 43 44, en la derecha: 36 37
blob (39)
    en la izquierda: 45 46 47, en la derecha: 9 11 19 22 45
blob_elmt (40)
    en la izquierda: 48 49 50 51 52 53 54, en la derecha: 45 46


Estado 0

    0 $accept: . list $end

    error   desplazar e ir al estado 1
    SPACE   desplazar e ir al estado 2
    NUMBER  desplazar e ir al estado 3
    DTEXT   desplazar e ir al estado 4
    EOL     desplazar e ir al estado 5
    TEXT    desplazar e ir al estado 6
    ','     desplazar e ir al estado 7
    '$'     desplazar e ir al estado 8
    '-'     desplazar e ir al estado 9
    '*'     desplazar e ir al estado 10

    list         ir al estado 11
    item         ir al estado 12
    keyval       ir al estado 13
    keygroup     ir al estado 14
    declaration  ir al estado 15
    blob         ir al estado 16
    blob_elmt    ir al estado 17


Estado 1

    8 item: error .
   47 blob: error .

    SPACE     reduce usando la regla 8 (item)
    SPACE     [reduce usando la regla 47 (blob)]
    NUMBER    reduce usando la regla 8 (item)
    NUMBER    [reduce usando la regla 47 (blob)]
    TEXT      reduce usando la regla 8 (item)
    TEXT      [reduce usando la regla 47 (blob)]
    ','       reduce usando la regla 8 (item)
    ','       [reduce usando la regla 47 (blob)]
    ':'       reduce usando la regla 47 (blob)
    OPENKEY   reduce usando la regla 47 (blob)
    '$'       reduce usando la regla 8 (item)
    '$'       [reduce usando la regla 47 (blob)]
    '-'       reduce usando la regla 8 (item)
    '-'       [reduce usando la regla 47 (blob)]
    '*'       reduce usando la regla 8 (item)
    '*'       [reduce usando la regla 47 (blob)]
    $default  reduce usando la regla 8 (item)


Estado 2

    6 item: SPACE .
   54 blob_elmt: SPACE .

    SPACE     reduce usando la regla 6 (item)
    SPACE     [reduce usando la regla 54 (blob_elmt)]
    NUMBER    reduce usando la regla 6 (item)
    NUMBER    [reduce usando la regla 54 (blob_elmt)]
    TEXT      reduce usando la regla 6 (item)
    TEXT      [reduce usando la regla 54 (blob_elmt)]
    ','       reduce usando la regla 6 (item)
    ','       [reduce usando la regla 54 (blob_elmt)]
    ':'       reduce usando la regla 54 (blob_elmt)
    OPENKEY   reduce usando la regla 54 (blob_elmt)
    '$'       reduce usando la regla 6 (item)
    '$'       [reduce usando la regla 54 (blob_elmt)]
    '-'       reduce usando la regla 6 (item)
    '-'       [reduce usando la regla 54 (blob_elmt)]
    '*'       reduce usando la regla 6 (item)
    '*'       [reduce usando la regla 54 (blob_elmt)]
    $default  reduce usando la regla 6 (item)


Estado 3

   49 blob_elmt: NUMBER .

    $default  reduce usando la regla 49 (blob_elmt)


Estado 4

   25 declaration: DTEXT . optionalcolon optionalweight TYPE $@4 numlist $@5 EOL
   27            | DTEXT . optionalcolon optionalweight TYPE $@6 EOL
   30            | DTEXT . optionalcolon optionalweight $@7 numlist $@8 EOL

    ':'  desplazar e ir al estado 18

    $default  reduce usando la regla 33 (optionalcolon)

    optionalcolon  ir al estado 19


Estado 5

    5 item: EOL .

    $default  reduce usando la regla 5 (item)


Estado 6

   48 blob_elmt: TEXT .

    $default  reduce usando la regla 48 (blob_elmt)


Estado 7

   50 blob_elmt: ',' .

    $default  reduce usando la regla 50 (blob_elmt)


Estado 8

   53 blob_elmt: '$' .

    $default  reduce usando la regla 53 (blob_elmt)


Estado 9

   52 blob_elmt: '-' .

    $default  reduce usando la regla 52 (blob_elmt)


Estado 10

   51 blob_elmt: '*' .

    $default  reduce usando la regla 51 (blob_elmt)


Estado 11

    0 $accept: list . $end
    1 list: list . item

    $end    desplazar e ir al estado 20
    error   desplazar e ir al estado 1
    SPACE   desplazar e ir al estado 2
    NUMBER  desplazar e ir al estado 3
    DTEXT   desplazar e ir al estado 4
    EOL     desplazar e ir al estado 5
    TEXT    desplazar e ir al estado 6
    ','     desplazar e ir al estado 7
    '$'     desplazar e ir al estado 8
    '-'     desplazar e ir al estado 9
    '*'     desplazar e ir al estado 10

    item         ir al estado 21
    keyval       ir al estado 13
    keygroup     ir al estado 14
    declaration  ir al estado 15
    blob         ir al estado 16
    blob_elmt    ir al estado 17


Estado 12

    2 list: item .

    $default  reduce usando la regla 2 (list)


Estado 13

    3 item: keyval .

    $default  reduce usando la regla 3 (item)


Estado 14

    4 item: keygroup .

    $default  reduce usando la regla 4 (item)


Estado 15

    7 item: declaration .

    $default  reduce usando la regla 7 (item)


Estado 16

    9 keyval: blob . ':' blob
   11 keygroup: blob . OPENKEY $@1 keylist CLOSEKEY
   45 blob: blob . blob_elmt

    SPACE    desplazar e ir al estado 22
    NUMBER   desplazar e ir al estado 3
    TEXT     desplazar e ir al estado 6
    ','      desplazar e ir al estado 7
    ':'      desplazar e ir al estado 23
    OPENKEY  desplazar e ir al estado 24
    '$'      desplazar e ir al estado 8
    '-'      desplazar e ir al estado 9
    '*'      desplazar e ir al estado 10

    blob_elmt  ir al estado 25


Estado 17

   46 blob: blob_elmt .

    $default  reduce usando la regla 46 (blob)


Estado 18

   31 optionalcolon: ':' .

    $default  reduce usando la regla 31 (optionalcolon)


Estado 19

   25 declaration: DTEXT optionalcolon . optionalweight TYPE $@4 numlist $@5 EOL
   27            | DTEXT optionalcolon . optionalweight TYPE $@6 EOL
   30            | DTEXT optionalcolon . optionalweight $@7 numlist $@8 EOL
   32 optionalcolon: optionalcolon . SPACE

    SPACE   desplazar e ir al estado 26
    WEIGHT  desplazar e ir al estado 27

    $default  reduce usando la regla 35 (optionalweight)

    optionalweight  ir al estado 28


Estado 20

    0 $accept: list $end .

    $default  aceptar


Estado 21

    1 list: list item .

    $default  reduce usando la regla 1 (list)


Estado 22

   54 blob_elmt: SPACE .

    $default  reduce usando la regla 54 (blob_elmt)


Estado 23

    9 keyval: blob ':' . blob

    error   desplazar e ir al estado 29
    SPACE   desplazar e ir al estado 22
    NUMBER  desplazar e ir al estado 3
    TEXT    desplazar e ir al estado 6
    ','     desplazar e ir al estado 7
    '$'     desplazar e ir al estado 8
    '-'     desplazar e ir al estado 9
    '*'     desplazar e ir al estado 10

    blob       ir al estado 30
    blob_elmt  ir al estado 17


Estado 24

   11 keygroup: blob OPENKEY . $@1 keylist CLOSEKEY

    $default  reduce usando la regla 10 ($@1)

    $@1  ir al estado 31


Estado 25

   45 blob: blob blob_elmt .

    $default  reduce usando la regla 45 (blob)


Estado 26

   32 optionalcolon: optionalcolon SPACE .

    $default  reduce usando la regla 32 (optionalcolon)


Estado 27

   34 optionalweight: WEIGHT .

    $default  reduce usando la regla 34 (optionalweight)


Estado 28

   25 declaration: DTEXT optionalcolon optionalweight . TYPE $@4 numlist $@5 EOL
   27            | DTEXT optionalcolon optionalweight . TYPE $@6 EOL
   30            | DTEXT optionalcolon optionalweight . $@7 numlist $@8 EOL

    TYPE  desplazar e ir al estado 32

    $default  reduce usando la regla 28 ($@7)

    $@7  ir al estado 33


Estado 29

   47 blob: error .

    $default  reduce usando la regla 47 (blob)


Estado 30

    9 keyval: blob ':' blob .
   45 blob: blob . blob_elmt

    SPACE   desplazar e ir al estado 22
    NUMBER  desplazar e ir al estado 3
    TEXT    desplazar e ir al estado 6
    ','     desplazar e ir al estado 7
    '$'     desplazar e ir al estado 8
    '-'     desplazar e ir al estado 9
    '*'     desplazar e ir al estado 10

    SPACE     [reduce usando la regla 9 (keyval)]
    NUMBER    [reduce usando la regla 9 (keyval)]
    TEXT      [reduce usando la regla 9 (keyval)]
    ','       [reduce usando la regla 9 (keyval)]
    '$'       [reduce usando la regla 9 (keyval)]
    '-'       [reduce usando la regla 9 (keyval)]
    '*'       [reduce usando la regla 9 (keyval)]
    $default  reduce usando la regla 9 (keyval)

    blob_elmt  ir al estado 25


Estado 31

   11 keygroup: blob OPENKEY $@1 . keylist CLOSEKEY

    error   desplazar e ir al estado 34
    SPACE   desplazar e ir al estado 22
    NUMBER  desplazar e ir al estado 3
    EOL     desplazar e ir al estado 35
    TEXT    desplazar e ir al estado 6
    ','     desplazar e ir al estado 7
    '$'     desplazar e ir al estado 8
    '-'     desplazar e ir al estado 9
    '*'     desplazar e ir al estado 10

    keyval        ir al estado 36
    keygroup      ir al estado 37
    keylist       ir al estado 38
    keylist_item  ir al estado 39
    preedit       ir al estado 40
    blob          ir al estado 41
    blob_elmt     ir al estado 17


Estado 32

   25 declaration: DTEXT optionalcolon optionalweight TYPE . $@4 numlist $@5 EOL
   27            | DTEXT optionalcolon optionalweight TYPE . $@6 EOL

    EOL       reduce usando la regla 26 ($@6)
    $default  reduce usando la regla 23 ($@4)

    $@4  ir al estado 42
    $@6  ir al estado 43


Estado 33

   30 declaration: DTEXT optionalcolon optionalweight $@7 . numlist $@8 EOL

    error   desplazar e ir al estado 44
    NUMBER  desplazar e ir al estado 45
    DTEXT   desplazar e ir al estado 46
    '$'     desplazar e ir al estado 47
    '*'     desplazar e ir al estado 48

    numlist   ir al estado 49
    num_item  ir al estado 50


Estado 34

   18 keylist_item: error .
   47 blob: error .

    error     reduce usando la regla 18 (keylist_item)
    error     [reduce usando la regla 47 (blob)]
    SPACE     reduce usando la regla 18 (keylist_item)
    SPACE     [reduce usando la regla 47 (blob)]
    NUMBER    reduce usando la regla 18 (keylist_item)
    NUMBER    [reduce usando la regla 47 (blob)]
    THEN      reduce usando la regla 47 (blob)
    EOL       reduce usando la regla 18 (keylist_item)
    EOL       [reduce usando la regla 47 (blob)]
    TEXT      reduce usando la regla 18 (keylist_item)
    TEXT      [reduce usando la regla 47 (blob)]
    ','       reduce usando la regla 18 (keylist_item)
    ','       [reduce usando la regla 47 (blob)]
    ':'       reduce usando la regla 47 (blob)
    OPENKEY   reduce usando la regla 47 (blob)
    CLOSEKEY  reduce usando la regla 18 (keylist_item)
    CLOSEKEY  [reduce usando la regla 47 (blob)]
    '$'       reduce usando la regla 18 (keylist_item)
    '$'       [reduce usando la regla 47 (blob)]
    '-'       reduce usando la regla 18 (keylist_item)
    '-'       [reduce usando la regla 47 (blob)]
    '*'       reduce usando la regla 18 (keylist_item)
    '*'       [reduce usando la regla 47 (blob)]
    $default  reduce usando la regla 18 (keylist_item)


Estado 35

   17 keylist_item: EOL .

    $default  reduce usando la regla 17 (keylist_item)


Estado 36

   15 keylist_item: keyval .

    $default  reduce usando la regla 15 (keylist_item)


Estado 37

   16 keylist_item: keygroup .

    $default  reduce usando la regla 16 (keylist_item)


Estado 38

   11 keygroup: blob OPENKEY $@1 keylist . CLOSEKEY
   12 keylist: keylist . keylist_item

    error     desplazar e ir al estado 34
    SPACE     desplazar e ir al estado 22
    NUMBER    desplazar e ir al estado 3
    EOL       desplazar e ir al estado 35
    TEXT      desplazar e ir al estado 6
    ','       desplazar e ir al estado 7
    CLOSEKEY  desplazar e ir al estado 51
    '$'       desplazar e ir al estado 8
    '-'       desplazar e ir al estado 9
    '*'       desplazar e ir al estado 10

    keyval        ir al estado 36
    keygroup      ir al estado 37
    keylist_item  ir al estado 52
    preedit       ir al estado 40
    blob          ir al estado 41
    blob_elmt     ir al estado 17


Estado 39

   13 keylist: keylist_item .

    $default  reduce usando la regla 13 (keylist)


Estado 40

   14 keylist_item: preedit .

    $default  reduce usando la regla 14 (keylist_item)


Estado 41

    9 keyval: blob . ':' blob
   11 keygroup: blob . OPENKEY $@1 keylist CLOSEKEY
   19 keylist_item: blob .
   22 preedit: blob . $@2 THEN blob $@3 EOL
   45 blob: blob . blob_elmt

    SPACE    desplazar e ir al estado 22
    NUMBER   desplazar e ir al estado 3
    TEXT     desplazar e ir al estado 6
    ','      desplazar e ir al estado 7
    ':'      desplazar e ir al estado 23
    OPENKEY  desplazar e ir al estado 24
    '$'      desplazar e ir al estado 8
    '-'      desplazar e ir al estado 9
    '*'      desplazar e ir al estado 10

    SPACE     [reduce usando la regla 19 (keylist_item)]
    NUMBER    [reduce usando la regla 19 (keylist_item)]
    THEN      reduce usando la regla 20 ($@2)
    TEXT      [reduce usando la regla 19 (keylist_item)]
    ','       [reduce usando la regla 19 (keylist_item)]
    '$'       [reduce usando la regla 19 (keylist_item)]
    '-'       [reduce usando la regla 19 (keylist_item)]
    '*'       [reduce usando la regla 19 (keylist_item)]
    $default  reduce usando la regla 19 (keylist_item)

    $@2        ir al estado 53
    blob_elmt  ir al estado 25


Estado 42

   25 declaration: DTEXT optionalcolon optionalweight TYPE $@4 . numlist $@5 EOL

    error   desplazar e ir al estado 44
    NUMBER  desplazar e ir al estado 45
    DTEXT   desplazar e ir al estado 46
    '$'     desplazar e ir al estado 47
    '*'     desplazar e ir al estado 48

    numlist   ir al estado 54
    num_item  ir al estado 50


Estado 43

   27 declaration: DTEXT optionalcolon optionalweight TYPE $@6 . EOL

    EOL  desplazar e ir al estado 55


Estado 44

   44 num_item: error .

    $default  reduce usando la regla 44 (num_item)


Estado 45

   39 num_item: NUMBER . '-' NUMBER
   40         | NUMBER .

    '-'  desplazar e ir al estado 56

    $default  reduce usando la regla 40 (num_item)


Estado 46

   41 num_item: DTEXT .

    $default  reduce usando la regla 41 (num_item)


Estado 47

   43 num_item: '$' . NUMBER

    NUMBER  desplazar e ir al estado 57


Estado 48

   42 num_item: '*' .

    $default  reduce usando la regla 42 (num_item)


Estado 49

   30 declaration: DTEXT optionalcolon optionalweight $@7 numlist . $@8 EOL
   37 numlist: numlist . ',' num_item
   38        | numlist . SPACE

    SPACE  desplazar e ir al estado 58
    ','    desplazar e ir al estado 59

    $default  reduce usando la regla 29 ($@8)

    $@8  ir al estado 60


Estado 50

   36 numlist: num_item .

    $default  reduce usando la regla 36 (numlist)


Estado 51

   11 keygroup: blob OPENKEY $@1 keylist CLOSEKEY .

    $default  reduce usando la regla 11 (keygroup)


Estado 52

   12 keylist: keylist keylist_item .

    $default  reduce usando la regla 12 (keylist)


Estado 53

   22 preedit: blob $@2 . THEN blob $@3 EOL

    THEN  desplazar e ir al estado 61


Estado 54

   25 declaration: DTEXT optionalcolon optionalweight TYPE $@4 numlist . $@5 EOL
   37 numlist: numlist . ',' num_item
   38        | numlist . SPACE

    SPACE  desplazar e ir al estado 58
    ','    desplazar e ir al estado 59

    $default  reduce usando la regla 24 ($@5)

    $@5  ir al estado 62


Estado 55

   27 declaration: DTEXT optionalcolon optionalweight TYPE $@6 EOL .

    $default  reduce usando la regla 27 (declaration)


Estado 56

   39 num_item: NUMBER '-' . NUMBER

    NUMBER  desplazar e ir al estado 63


Estado 57

   43 num_item: '$' NUMBER .

    $default  reduce usando la regla 43 (num_item)


Estado 58

   38 numlist: numlist SPACE .

    $default  reduce usando la regla 38 (numlist)


Estado 59

   37 numlist: numlist ',' . num_item

    error   desplazar e ir al estado 44
    NUMBER  desplazar e ir al estado 45
    DTEXT   desplazar e ir al estado 46
    '$'     desplazar e ir al estado 47
    '*'     desplazar e ir al estado 48

    num_item  ir al estado 64


Estado 60

   30 declaration: DTEXT optionalcolon optionalweight $@7 numlist $@8 . EOL

    EOL  desplazar e ir al estado 65


Estado 61

   22 preedit: blob $@2 THEN . blob $@3 EOL

    error   desplazar e ir al estado 29
    SPACE   desplazar e ir al estado 22
    NUMBER  desplazar e ir al estado 3
    TEXT    desplazar e ir al estado 6
    ','     desplazar e ir al estado 7
    '$'     desplazar e ir al estado 8
    '-'     desplazar e ir al estado 9
    '*'     desplazar e ir al estado 10

    blob       ir al estado 66
    blob_elmt  ir al estado 17


Estado 62

   25 declaration: DTEXT optionalcolon optionalweight TYPE $@4 numlist $@5 . EOL

    EOL  desplazar e ir al estado 67


Estado 63

   39 num_item: NUMBER '-' NUMBER .

    $default  reduce usando la regla 39 (num_item)


Estado 64

   37 numlist: numlist ',' num_item .

    $default  reduce usando la regla 37 (numlist)


Estado 65

   30 declaration: DTEXT optionalcolon optionalweight $@7 numlist $@8 EOL .

    $default  reduce usando la regla 30 (declaration)


Estado 66

   22 preedit: blob $@2 THEN blob . $@3 EOL
   45 blob: blob . blob_elmt

    SPACE   desplazar e ir al estado 22
    NUMBER  desplazar e ir al estado 3
    TEXT    desplazar e ir al estado 6
    ','     desplazar e ir al estado 7
    '$'     desplazar e ir al estado 8
    '-'     desplazar e ir al estado 9
    '*'     desplazar e ir al estado 10

    $default  reduce usando la regla 21 ($@3)

    $@3        ir al estado 68
    blob_elmt  ir al estado 25


Estado 67

   25 declaration: DTEXT optionalcolon optionalweight TYPE $@4 numlist $@5 EOL .

    $default  reduce usando la regla 25 (declaration)


Estado 68

   22 preedit: blob $@2 THEN blob $@3 . EOL

    EOL  desplazar e ir al estado 69


Estado 69

   22 preedit: blob $@2 THEN blob $@3 EOL .

    $default  reduce usando la regla 22 (preedit)
